interpreter/tests/golden-files/complex-computed-index.golden.enzo
//= COMPUTED INDEX: BASIC ADDITION
30

//= COMPUTED INDEX: WITH LITERAL ARITHMETIC
300
200

//= COMPUTED INDEX: WITH NESTED EXPRESSIONS
300
300

//= COMPUTED INDEX: NEGATIVE AND ZERO
error: List index out of range
	$list300.($a00 - 1);          // error: List index out of range (if $a = 1)
5
10
error: List index out of range
	$list300.(-1);              // error: List index out of range

//= COMPUTED INDEX: OUT OF BOUNDS
error: List index out of range
	$list300.(4);               // error: List index out of range (List has 3 elements)
error: List index out of range
	$list300.($a00 + $b00 + 2);     // error: List index out of range

//= COMPUTED INDEX: NON-INTEGER RESULT
error: List index must be an integer
	$list400.(1.5);             // error: List index must be integer
error: List index must be an integer
	$list400.($a00 / 2);          // error: List index must be integer

//= COMPUTED INDEX: INVALID EXPRESSION TYPE
error: can't use text as index
	$list400.("hi");            // error: List index must be integer
error: List index must be an integer
	$list400.($list100);          // error: List index must be integer

//= COMPUTED INDEX: USE IN ASSIGNMENT
99

//= COMPUTED INDEX: USE IN PIPELINE
30

//= COMPUTED INDEX: INDEX BY FUNCTION RETURN (optional, if supported)
99

//= COMPUTED INDEX: VARIABLE SHADOWING
30

//= COMPUTED INDEX: IN INTERPOLATION
"Element is 99"
